--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="content">
             <div class="about">
                 <h3>About</h3>
-                <img width="155px" src="https://www.fnordware.com/superpng/pnggrad8rgb.png" alt="logo about" />
+                <img width="155px" src="https://www.fnordware.com/superpng/pnggrad8rgb.pngx" alt="logo about" />
                 <div class="par">
                     <p>
                         Hi! I'm Muhammad Farhan, 21 yo. A mechanic and also a student at <a
