--- a/index.html
+++ b/index.html
@@ -126,9 +126,10 @@
                         </label>
                     </div>
                     <div class="field text-area">
-                        <textarea class="input" name="pesan" rows="5" style="resize: none" required></textarea>
+                        <textarea class="input" name="pesan" rows="5" style="resize: none" maxlength="136"
+                            required></textarea>
                         <label class="label-name" for="pesan">
-                            <span class="content-name">Message</span>
+                            <span class="content-name area">Message</span>
                         </label>
                     </div>
 
