--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="icon.png" type="image/icon type" />
-    <!-- <title>Farhan's Web Potfolio</title> -->
-    <title>Web Potfolio</title>
+    <!-- <title>Farhan's Web Portfolio</title> -->
+    <title>Web Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
 </head>
@@ -20,9 +20,9 @@
             <h4 style="cursor: pointer;">Home</h4>
         </div>
         <ul class="sub-nav">
-            <li><a onclick="meScroll('.about')">About</a></li>
-            <li><a onclick="meScroll('.project')">Projects</a></li>
-            <li><a onclick="meScroll('.contact')">Contact</a></li>
+            <li onclick="meScroll('.about')"><a>About</a></li>
+            <li onclick="meScroll('.project')"><a>Projects</a></li>
+            <li onclick="meScroll('.contact')"><a>Contact</a></li>
         </ul>
         <div class="hamburger">
             <div></div>
