--- a/projects/groupRandomiser/index.html
+++ b/projects/groupRandomiser/index.html
@@ -30,7 +30,7 @@
         <div class="resultGroup d-none">
             <span class="result-title">
                 <h2>Hasil Acak Kelompok</h2>
-                <button onclick="pageToggle()">Back</button>
+                <button onclick="buttonFun()">Back</button>
             </span>
             <div class="hasil">
                 <!-- group will rendered here -->
