--- a/projects/todoList/index.html
+++ b/projects/todoList/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="grid grid-rows-[max-content,1fr,max-content] h-screen text-gray-300 text-sm sm:text-lg">
+    <div class="grid grid-rows-[max-content,1fr,max-content] h-[var(--winHeight)] text-gray-300 text-sm sm:text-lg">
         <nav class="bg-indigo-900 py-4 px-1">
             <h4>TOTA</h4>
         </nav>
